[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["ashpb <31402193+ashpb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
